--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "aws-sdk": "^2.1632.0",
     "crypto": "^1.0.1",
-    "express": "^4.19.2",
     "install": "^0.13.0",
+    "mongoose": "^8.4.1",
     "npm": "^10.8.1"
   }
 }
